--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -47,7 +47,7 @@
   }
   
   .indicator {
-    background-color: green;
+    background-color: #00d676;
     height: 0.5rem;
     width: 0.5rem;
     border-radius: 100%;
