--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -10,7 +10,7 @@
   
   .slide {
     border-radius: 0.5rem;
-    box-shadow: 0px 0px 7px #666;
+    /* box-shadow: 0px 0px 7px #666; */
     width: 100%;
     height: 100%;
   }
@@ -19,25 +19,6 @@
     display: none;
   }
   
-  .arrow {
-    position: absolute;
-    filter: drop-shadow(0px 0px 5px #555);
-    width: 2rem;
-    height: 2rem;
-    color: white;
-  }
-  
-  .arrow:hover {
-    cursor: pointer;
-  }
-  
-  .arrow-left {
-    left: 1rem;
-  }
-  
-  .arrow-right {
-    right: 1rem;
-  }
   
   .indicators {
     display: flex;
@@ -59,6 +40,7 @@
   }
   
   .indicator-inactive {
+    transition: all 0.5s ease;
     background-color: rgb(195, 193, 193);
   }
   .indicator-inactive:hover{
